--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,10 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.2",
+        "php": "^8.4",
         "inertiajs/inertia-laravel": "^2.0",
         "kalnoy/nestedset": "^6.0",
-        "laravel/framework": "^11.31",
+        "laravel/framework": "^v12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "moonshine/moonshine": "^3.5",
@@ -27,7 +27,7 @@
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.1",
-        "phpunit/phpunit": "^11.0.1"
+        "phpunit/phpunit": "^11.0"
     },
     "autoload": {
         "psr-4": {
